# tiny-reactor

./: CMakeLists.txt  Makefile  README.md
examples/: CMakeLists.txt  client.cpp  epoll_test.cpp  global_vars.hpp  server.cpp
src/: CMakeLists.txt  main.cpp
src/helper/: define.hpp  logger.hpp  sockets.hpp  strings.hpp  utils.hpp
src/io_model/: blocking_io.hpp  nonblocking_io.hpp
tests/: CMakeLists.txt  utest.cpp
